--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_auction">AuctionActivity</string>
+    <string name="title_activity_meli_oauth_web">MeliOAuthWebActivity</string>
 
 </resources>
